PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-2_invalid_program/gcc-compile.txt
input.c:1:1: error: unknown type name 'Si'
Si ça c'est du C, moi je suis prof de manga.
^
input.c:1:7: error: expected ';' after top level declarator
Si ça c'est du C, moi je suis prof de manga.
     ^
     ;
input.c:1:9: warning: missing terminating ' character [-Winvalid-pp-token]
Si ça c'est du C, moi je suis prof de manga.
       ^
1 warning and 2 errors generated.

return code: 1
